  * debian/*: Update occurences of 2.19 to 2.21 and update symbols to match.
  * debian/patches/any/cvs-vismain-pie.diff: Compile vismain with -fPIE
    and link with -pie to fix testsuite failure with the new binutils.
  * debian/{control.in/main,rules}: Switch to gcc-4.9 on all architectures.
  * debian/patches/any/local-tester-gcc-4.9.diff: Fix gcc-4.9 regression.
  * debian/libc*.symbols*: Remove local __invoke_dynamic_linker__ symbol,
    which no longer shows up in random support libraries' symbol tables.
  * debian/sysdeps/*: Neither ports nor nptl are considered add-ons anymore.
  * debian/debhelper.in/glibc-doc.install: Install changelogs that exist.
  * debian/patches/i386/submitted-i686-timing.diff: Fix -Wundef warnings.
  * debian/patches/arm/unsubmitted-ldso-abi-check.diff: Fix build failures
    from format mismatches, uninitialised variables, and const conversions.
  * debian/patches/arm/unsubmitted-ldconfig-cache-abi.diff: Same as above.
  * Other than two hurd-i386 patches required as scaffolding for others,
    all the hurd-i386 patches are disabled, so this build *will* fail there.
  * kfreebsd's sysdeps patches almost certainly need updating for 2.21 too.
  * Failing on testsuite failures is disabled to attempt to get full builds.

 -- Adam Conrad <adconrad@0c3.net>  Fri, 06 Mar 2015 13:47:43 -0700

glibc (2.19-17) unstable; urgency=medium

  [ Adam Conrad ]
  * debian/rules.d/debhelper.mk: Unconditionally create tmp.substvars.
    Closes: #780431.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 14 Mar 2015 10:17:56 +0100

glibc (2.19-16) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: New patch to allow
    libpthread.so to be dynamically loaded from a dlopened library.
  * patches/hurd-i386/cvs-libpthread-libc-lockP{,2}.diff: New patch to
    dynamically call pthread functions from libc.

  [ Aurelien Jarno ]
  * We have a transition mechanism for the locales, as the Debian archive