@@ -1,3 +1,3 @@
 libc_rtlddir = /lib64
-extra_config_options = --enable-multi-arch --with-cpu=power7
+extra_config_options = --enable-multi-arch --enable-lock-elision --with-cpu=power7
 extra_cflags = -O3 -fno-tree-vectorize
