@@ -94,6 +94,7 @@ glibc (2.21-0experimental0) UNRELEASED; urgency=medium
     and link with -pie to fix testsuite failure with the new binutils.
   * debian/{control.in/main,rules}: Switch to gcc-4.9 on all architectures.
   * debian/patches/any/local-tester-gcc-4.9.diff: Fix gcc-4.9 regression.
+  * debian/sysdeps/*: --enable-lock-elision on powerpc, ppc64, and ppc64el.
   * debian/libc*.symbols*: Remove local __invoke_dynamic_linker__ symbol,
     which no longer shows up in random support libraries' symbol tables.
   * debian/sysdeps/*: Neither ports nor nptl are considered add-ons anymore.
